# http-client

./: .gitignore  CMakeLists.txt  README.md  httpClient.sln
httpClient/: CMakeLists.txt  httpClient.cpp  httpClient.h
httpClient/include/: URL.h  http_client.h  http_request.h  tcp_client.h
httpClient/src/: CMakeLists.txt  URL.cpp  exception.h  http_client.cpp  http_request.cpp  pch.h  tcp_client.cpp
httpClient/test/: CMakeLists.txt  URLTest.cpp  httpClientTest.cpp
